# efgrabber

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  cookies.txt
docs/: QNAM_EVALUATION.md
include/efgrabber/: common.h  cookie.h  database.h  download_manager.h  downloader.h  scraper.h  thread_pool.h
include/efgrabber/gui/: main_window.h  progress_view.h
src/: cookie.cpp  database.cpp  download_manager.cpp  downloader.cpp  main.cpp  main_cli.cpp  main_qt.cpp  scraper.cpp  thread_pool.cpp
src/gui/: browser_widget.cpp  browser_widget.h  main_window.cpp  main_window_qt.cpp  main_window_qt.h  progress_view.cpp  scraper_pool.cpp  scraper_pool.h
tests/: test_scraper.cpp
